--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Werkzeug~=2.3.6
-python-dotenv~=1.0.0
-WTForms~=2.3.3
-gunicorn==20.1.0
-requests==2.31.0
+Werkzeug
+python-dotenv
+WTForms
+gunicorn
+requests
 Flask
 flask-bootstrap
